# Claudeometer

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release-service.yml  release.yml
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/service/: Cargo.toml
crates/service/src/: api.rs  config.rs  main.rs  poller.rs  run.rs  status.rs
crates/service/src/svc/: launchd.rs  mod.rs  systemd.rs  windows.rs
docs/: DEVELOPER.md  SERVICE.md
scripts/: install.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  claude.rs  commands.rs  lib.rs  main.rs
src/components/: UsageBar.tsx  WindowControls.tsx
src/lib/: types.ts
src/views/: Dashboard.tsx  Debug.tsx  Login.tsx  Settings.tsx  TrayMenu.tsx
