[package]
name = "claudeometer"
version = "0.1.0"
description = "Monitor your Claude usage limits"
authors = []
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "claudeometer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
claudeometer-core = { path = "../crates/core" }
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "cookies"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
keyring = "2"
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.5", features = ["cors"] }

# Release profile tuning now lives in the workspace-root Cargo.toml (Cargo
# only honors [profile.*] from the root manifest in a workspace; see that
# file for why `panic = "abort"` was dropped rather than kept here).
