[package]
name = "claudeometer-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
description = "Shared claude.ai usage-fetching client used by both the Claudeometer desktop app and the headless service"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "cookies"] }
tokio = { version = "1", features = ["macros", "rt"] }
chrono = { version = "0.4", features = ["serde"] }
